# cmake-s

./: .gitmodules  CMakeLists.txt  Makefile  README.md
app/: CMakeLists.txt  main.cc
cmake/: AddGitSubmoduleFile.cmake
configured/: CMakeLists.txt  config.hpp.in
src/: CMakeLists.txt
src/my_lib/: CMakeLists.txt  my_lib.cc  my_lib.hpp
